--- a/mbed_app.json
+++ b/mbed_app.json
@@ -18,7 +18,11 @@
             "mbed-trace.enable": false,
             "mbed-trace.max-level": "TRACE_LEVEL_DEBUG",
             "rtos.main-thread-stack-size": 8192,
-            "platform.memory-tracing-enabled": true
+            "platform.memory-tracing-enabled": true,
+            "target.components_add": ["ism43362"],
+            "ism43362.provide-default": true,
+            "target.network-default-interface-type": "WIFI",
+            "target.macros_add" : ["MBEDTLS_SHA1_C"]
         },
         "DISCO_F413ZH": {
             "target.components_add": ["ism43362"],
